Fix styling for spans and add more dark mode styles

--- a/public/css/customv600.css
+++ b/public/css/customv600.css
@@ -98,6 +98,10 @@
     cursor:pointer;
 }
 
+.navLinkButton span {
+    margin: 4px;
+}
+
 .fullWidth {
     width:100%
 }
@@ -347,13 +351,9 @@ body.dark-theme {
 body.dark-theme button:hover,
 body.dark-theme .nav-item .active.nav-link,
 body.dark-theme nav.navbar,
-body.dark-theme #navigator .selectedMove {
+body.dark-theme #navigator .selectedMove,
+body.dark-theme .MuiPaper-root {
     background-color: #555;
-}
-
-body.dark-theme .nav-link:hover,
-body.dark-theme #navigator .navMove:hover {
-    color: #777;
 }
 
 body.dark-theme coord,
@@ -361,10 +361,29 @@ body.dark-theme button span,
 body.dark-theme button svg,
 body.dark-theme nav.navbar,
 body.dark-theme .nav-link,
-/* body.dark-theme .nav-item .nav-link, */
+body.dark-theme .nav-item .nav-link,
+body.dark-theme .infoMessage,
+body.dark-theme .infoMessage .navLinkButton,
 body.dark-theme #navigator,
 body.dark-theme #navigator .greyText,
 body.dark-theme tr.moveRow td,
-body.dark-theme th {
+body.dark-theme th,
+body.dark-theme .fenDiv textarea,
+body.dark-theme .fenDiv label,
+body.dark-theme .MuiPaper-root,
+body.dark-theme .MuiRadio-colorPrimary {
     color: #DDD;
+}
+
+body.dark-theme .nav-link:hover,
+body.dark-theme #navigator .navMove:hover {
+    color: #999;
+}
+
+body.dark-theme .moveRow:hover {
+    background-color: #555;
+}
+
+body.dark-theme .cg-wrap {
+    filter: grayscale(20%);
 }
